Update BGP-LS with latest RFCs
Many new RFCs have been published since the latest modifications to
BGP-LS. This patch propose an update of modified features and
implementation of new TLVs as per the following RFCs:

- RFC9552 which replace original RFC7752
- RFC9085 - Segment Routing
- RFC9514 - SRv6
- RFC9351 - Flex-Algo
- RFC9104 - Extended Admin Group
- RFC8814 - Node & Link MSD
- RFC9086 - Peer Node
- RFC9294 - ASLA

bgp-linkstate and bgp-segment-routing yang models have been first
updated. Implementation of parsers and serialisers have been update
or created accordingly.

Note that the TLV 1160 has been used for the Binding SID in current
implementation while TLV 1160 code point is now allocated for IS-IS
flood redirection as per IANA allocation. In fact, the TLV 1160 -
Binding SID corresponds to the individual draft prior to RFC9085
(see rfc9085 historical https://datatracker.ietf.org/doc/rfc9085/)
and has been remove in version 2 of the WG draft. In fact, what was
named Binding SID in the individual draft has been renamed to "Range
Prefix" in the WG draft and then RFC9085. The Binding-SID Prefix has
been only kept in the IS-IS extension for Segment Routing i.e.
RFC8667. Range is also the name used in OSPFv2 and OSPFv3 extension
for Segment Routing a.k.a. RFC8665 and RFC8666.

The newly Binding SID name coming from RFC9256 is now managed by the
draft draft-ietf-idr- sr-policy which will be implemented latter.

All old TE-LSP part has also been removed has they will be replaced
by the new draft draft-ietf-idr-bgp-ls-te-path and implemented latter.

A list of supported TLVs has been added to the documentation.

JIRA: BGPCEP-1033

Signed-off-by: Olivier Dugeon <olivier.dugeon@orange.com>
Change-Id: I6ad6a0c1c3add5b00d6edd2ee438e58e9653b85b